fixed alignment

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
 body{
   height: 100vh;
-  width: 100%;
+  width: 100% !important;
 }
 .main-container{
   height: 100vh;
+}
+
+
+::-webkit-scrollbar {
+    display: none;
+}
+html , body{
+  padding: 0;
+  margin: 0;
 }
